# texbook

./: .gitignore  .latexmkrc  AGENTS.md  CLAUDE.md  LICENSE  LaTeX.code-workspace  README.md  TODO.md  pyproject.toml
packaging/: texbook-gui.spec
scripts/: post-build.sh
src/: .latexmkrc  test.tex
src/latex_tools/: __init__.py  cli.py
src/latex_tools/convert/: latex_converter.py
src/latex_tools/extract/: base.py  text_extractor.py
src/latex_tools/llm/: cache.py  client.py  config.py  pipeline.py  presets.py  prompts.py
src/texbook/: __init__.py  cli.py  complex_content.py  document_class.py  latex_text.py  output_options.py  structure.py
src/texbook/convert/: __init__.py  latex_converter.py  project.py
src/texbook/extract/: base.py  text_extractor.py
src/texbook/gui/: __init__.py  __main__.py  app.py  core_adapter.py  dialogs.py  display.py  executor.py  i18n.py  main_panel.py  main_window.py  persistence.py  resources.py  selection.py  settings.py  tasks.py  theme.py  widgets.py
src/texbook/llm/: __init__.py  cache.py  client.py  config.py  factory.py  pipeline.py  presets.py  prompts.py  scheduler.py
tests/: test_cli_helpers.py  test_gui_skeleton.py  test_latex_build_config.py  test_latex_converter.py  test_llm_client.py  test_llm_factory.py  test_llm_pipeline.py  test_llm_scheduler.py  test_prompt_presets.py  test_structure.py  test_text_extractor.py
