[project]
name = "latex-tools"
version = "0.1.0"
description = "PDF extraction and LaTeX conversion for Chinese math lecture notes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "pymupdf>=1.25.0",
    "typer>=0.15.0",
]

[project.scripts]
latex-tools = "latex_tools.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latex_tools"]
